notes: fix whitespace for 'newest first' mode

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -3706,6 +3706,8 @@ regexp('^https?://((next|www)\.)?(gitlab\.(?!(io|biterg)).*)(/.*)?$') {
                 box-shadow: none i;
             }
         }
+        /// Notes -> Fix the 'newest first' mode. @upstream
+        /.js-comment-form + ul > li:first-child { margin-top: 4rem i }
     }
 
     // Issue/MRs/Epics -> Discussions.
